Refactor star rating component to use Font Awesome solid icons and improve event handling

--- a/Star Rating/index.html
+++ b/Star Rating/index.html
@@ -17,11 +17,11 @@
     <div class="container">
         <h1>Star rating component</h1>
       <div class="star-rating-container">
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
+        <i class="fa-regular fa-star"></i>
+        <i class="fa-regular fa-star"></i>
+        <i class="fa-regular fa-star"></i>
+        <i class="fa-regular fa-star"></i>
+        <i class="fa-regular fa-star"></i>
       </div>
       <div class="selected-rating-container">
         <p>Selected rating value is : <span class="selected-rating-value">0</span> </p>
