--- a/Image Slider/index.html
+++ b/Image Slider/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Slider</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Image Slider</h1>
+    <div class="slider"></div>
+
+    <div class="action-dock">
+      <button class="btn-slide prev">Left</button>
+      <div class="dots-container"></div>
+      <button class="btn-slide next">Next</button>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
