--- a/Light-Dark Mode/index.html
+++ b/Light-Dark Mode/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Light/Dark Mode</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1 class="toggle-heading">Toggle Light & Dark Mode</h1>
-    <button class="toggle-btn">Toggle</button>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="toggle-heading">Toggle Light & Dark Mode</h1>
+      <button class="toggle-theme">Toggle</button>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
