--- a/MultiStep Progress Bar/index.html
+++ b/MultiStep Progress Bar/index.html
@@ -8,13 +8,18 @@
   </head>
   <body>
     <div class="progressBar-wrapper">
-      <h1>MultiStep Progress Bar</h1>
+      <h1>MultiStep Progress Bar : Total Steps 4</h1>
+      <div class="progress-container">
+        <div class="progress"></div>
+        <h1 class="step">Step 0</h1>
+      </div>
       <div class="progress-action">
-        <button class="prev button">
+        <button class="prev button disable">
             <svg class="arrow" viewBox="0 0 448 512" height="1em" xmlns="http://www.w3.org/2000/svg"><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"></path></svg><span class="text">Previous</span></button>
         <button class="next button"><span class="text">Next</span>
             <svg class="arrow" viewBox="0 0 448 512" height="1em" xmlns="http://www.w3.org/2000/svg"><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"></path></svg></button>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
