--- a/Random Image Generator/index.html
+++ b/Random Image Generator/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Random Image Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Random Image Generator</h1>
+    <div class="container"></div>
+    <button type="button" class="load-more">Load More!</button>
+    <script src="script.js"></script>
 </body>
 </html>
